// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Header renders correctly  1`] = `
<Header__StyledHeader>
  <Header__LogoContainer>
    <Header__Logo
      data-test="logo"
      to="/"
    >
      <Header__LogoImg
        alt="Author"
        src="logo.svg"
        width={20}
      />
    </Header__Logo>
  </Header__LogoContainer>
  <Header__QuestionnaireTitle>
    <Header__Title
      data-test="questionnaire-title"
    >
      test-title
    </Header__Title>
  </Header__QuestionnaireTitle>
  <Header__UtilityBtns />
</Header__StyledHeader>
`;

exports[`components/Header when the user is signed in should render user's profile 1`] = `
<Header__StyledUserProfile
  onSignOut={[Function]}
  user={
    Object {
      "name": "Foo Bar",
      "photo": "file:///path/to/some/photo.jpg",
    }
  }
/>
`;

exports[`components/Header when there is a questionnaire should render a preview button 1`] = `
<LinkButton
  data-test="btn-preview"
  href="http://localhost:4000/launch/1"
  small={true}
  variant="tertiary-light"
>
  <IconText
    hideText={false}
    icon={[Function]}
  >
    View survey
  </IconText>
</LinkButton>
`;

exports[`components/Header when there is a questionnaire should render a share button 1`] = `
<Header__ShareButton
  data-test="btn-share"
  onClick={[Function]}
  small={true}
  variant="tertiary-light"
>
  <IconText
    hideText={false}
    icon={[Function]}
  >
    Share
  </IconText>
</Header__ShareButton>
`;

exports[`components/Header when there is a questionnaire should render the title 1`] = `
<Header__Title
  data-test="questionnaire-title"
>
  Questionnaire
</Header__Title>
`;

exports[`withCurrentUser should not query for user info when on the sign-in page 1`] = `
<UnconnectedHeader
  match={
    Object {
      "path": "/sign-in",
    }
  }
  raiseToast={[MockFunction]}
  signOutUser={[MockFunction]}
  title="test-title"
/>
`;

exports[`withCurrentUser should query for user info when on any other page 1`] = `
<Query
  fetchPolicy="network-only"
  query={
    Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "name": Object {
            "kind": "Name",
            "value": "GetCurrentUser",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "name": Object {
                  "kind": "Name",
                  "value": "me",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "id",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "name",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "email",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "picture",
                      },
                      "selectionSet": undefined,
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 91,
        "start": 0,
      },
    }
  }
>
  <Component />
</Query>
`;
